# telecomcredit

./: .gitignore  pyproject.toml  setup.py
.github/workflows/: test.yaml
tests/: conftest.py  test_credit_card.py  test_webhook.py
